--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "analyze": "ANALYZE=true next build"
   },
   "keywords": [],
   "author": "",
@@ -25,7 +26,13 @@
     "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "resend": "^4.7.0",
     "tailwindcss": "^3.4.15",
     "typescript": "^5.8.3"
+  },
+  "devDependencies": {
+    "@next/bundle-analyzer": "^15.4.3",
+    "eslint": "9.31.0",
+    "eslint-config-next": "15.4.3"
   }
 }
